# NetLook

./: CMakeLists.txt  NetLook.sln  NetLook.vcxproj  NetLook.vcxproj.filters  admin.cpp  admin.h  admin.txt  data base movies.txt  data base series.txt  main.cpp  menus.cpp  menus.h  movie.cpp  movie.h  movies.txt  movies2.txt  moviesDB.cpp  moviesDB.h  moviesWatchList.txt  outputs.cpp  outputs.h  readme.md  series.cpp  series.h  series.txt  seriesDB.cpp  seriesDB.h  seriesWatchList.txt  show.cpp  show.h  strings.cpp  strings.h  user.cpp  user.h  user.txt  validationFile.cpp  validationFile.h  viewer.cpp  viewer.h
